<resources>
    <string name="app_name">Music</string>
    <string name="string_hot_today"><![CDATA[Hot Today >]]></string>
    <string name="string_load_more">Load more ...</string>
    <string name="string_genres"><![CDATA[Genres >]]></string>
    <string name="string_search">Search</string>
    <string name="string_home">home</string>
    <string name="string_favorite">favorite</string>
    <string name="string_local">local</string>
    <string name="string_keyword">Keyword</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="string_music_type">MUSIC TYPE</string>
    <string name="string_shuffle_play">Shuffle Play</string>
    <string name="string_now_playing">Now playing</string>
    <string name="error_download">This track is copyrighted</string>
    <string name="notify_downloading">Downloading...</string>
    <string name="notify_download_complete">Download Complete</string>
    <string name="notify_file_exists">Song already exist</string>
    <string name="notify_confirm_download">Do you want to continue download ?</string>
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>
    <string name="string_downloading">Downloading</string>
    <string name="add_favorite_successfull">Add successfull</string>
    <string name="add_favorite_failed">Add failed</string>
    <string name="delete_success">Delete successfull</string>
    <string name="delete_failed">Delete failed</string>
    <string name="load_local_failed">Load local failed</string>
</resources>
